<resources>
    <string name="show_password">Show password</string>
    <string name="login_screen">Login</string>
    <string name="app_name">FateE</string>
    <string name="action_favorite">ActionBarFavorite</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="register_nickname">Nickname</string>
    <string name="register_password_verify">Password verification</string>
    <string name="register_email">Email</string>
    <string name="login_warning">Oops! You lost Internet connection</string>
    <string name="title_activity_main">Fatee</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="about_page_description" translatable="false">I would like to send my sincere thanks to Enclave for helping me complete this project.</string>
    <string name="about_contact_us">Contact us</string>
    <string name="about_instagram">Follow us on Instagram</string>
    <string name="about_facebook">Like us on Facebook</string>
    <string name="about_play_store">Rate us on the Play Store</string>
    <string name="about_youtube">Watch us on Youtube</string>
    <string name="about_twitter">Follow us on Twitter</string>
    <string name="about_github">Fork us on GitHub</string>
    <string name="about_website">Visit our website</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_email">Please enter your Registered Email below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="submit_button_name">Submit</string>
    <string name="update_button_name">Update</string>
    <string name="add_diaglog_name">Adding</string>
    <string name="register_password">Password</string>
    <string name="android_profile_ui_design">Android Profile UI Design</string>
</resources>
