<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="534dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="#fff"
        android:layout_alignParentLeft="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:padding="10dip">

            <LinearLayout
                android:id="@+id/linear_register_Username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_register_Username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:drawableLeft="@drawable/user_icon_png"
                    android:ems="10"
                    android:hint="@string/login_username"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_register_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_register_Username"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_register_Password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:drawableLeft="@drawable/password_icon"
                    android:ems="10"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_register_PassworkVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_register_Password"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_register_PassworkVerify"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:drawableLeft="@drawable/password_icon"
                    android:ems="10"
                    android:hint="@string/register_password_verify"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </LinearLayout>

            <!--<LinearLayout-->
                <!--android:id="@+id/linear_register_Email"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@id/linear_register_PassworkVerify"-->
                <!--android:orientation="horizontal">-->


                <!--<EditText-->
                    <!--android:id="@+id/edt_register_Email"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_marginLeft="20dp"-->
                    <!--android:layout_marginRight="20dp"-->
                    <!--android:drawableLeft="@drawable/register_email"-->
                    <!--android:ems="10"-->
                    <!--android:hint="@string/register_email"-->
                    <!--android:maxLines="1"-->
                    <!--android:inputType="textEmailAddress"/>-->
            <!--</LinearLayout>-->

            <LinearLayout
                android:id="@+id/linear_register_Nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_register_PassworkVerify"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/edt_register_Nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:drawableLeft="@drawable/nickname_icon"
                    android:ems="10"
                    android:hint="@string/register_nickname"
                    android:maxLines="1" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linear_register_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_register_PassworkVerify"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/edt_register_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:drawableLeft="@drawable/nickname_icon"
                    android:ems="10"
                    android:hint="@string/register_email"
                    android:maxLines="1" />
            </LinearLayout>


        </LinearLayout>

        <RadioGroup
            android:id="@+id/radiogr_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="137dp"
            android:orientation="vertical"
            android:layout_alignParentLeft="true">

            <RadioButton
                android:id="@+id/radiobtn_gender_Male"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="onRadioButtonClicked"
                android:text="Male"
                />

            <RadioButton
                android:id="@+id/radiobtn_gender_Female"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="onRadioButtonClicked"
                android:text="Female" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_RegisterSubmit"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="42dp"
            android:background="@drawable/shape"
            android:onClick="registerSubmit"
            android:text="Register"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_login" />

        <!-- Registration Form Ends -->
    </RelativeLayout>
</RelativeLayout>