<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="20dp">>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="SIGN UP"
        android:textColor="#33b5e5"
        android:textSize="25sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_register_Username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/user_icon_png"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="Username"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#9E9E9E"
            android:textColorHint="#33b5e5"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="#33b5e5" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_register_Email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/mail_icon_png"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#9E9E9E"
            android:textColorHint="#33b5e5"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="#33b5e5" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_register_username3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_register_Nickname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/mail_icon_png"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="Nickname"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#9E9E9E"
            android:textColorHint="#33b5e5"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="#33b5e5" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edt_register_Password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/mail_icon_png"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#9E9E9E"
            android:textColorHint="#33b5e5"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="#33b5e5" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edt_register_PassworkVerify"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/password_icon_png"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/register_password_verify"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#9E9E9E"
            android:textColorHint="#33b5e5"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="#33b5e5" />
    <RadioGroup
        android:id="@+id/radiogr_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <RadioButton
            android:id="@+id/radiobtn_gender_Male"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Male"
            android:textColor="#33b5e5"/>

        <RadioButton
            android:id="@+id/radiobtn_gender_Female"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Female"
            android:textColor="#33b5e5"/>
    </RadioGroup>
    <CheckBox
        android:id="@+id/terms_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/terms_conditions"
        android:textColor="#33b5e5"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_RegisterSubmit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/loginbutton_selector"
        android:padding="3dp"
        android:text="SUBMIT"
        android:textColor="#33b5e5"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/already_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/already_user"
        android:textColor="#33b5e5"
        android:textSize="15sp" />

</LinearLayout>